--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/sepbe?schema=public"
-JWT_SECRET="change-me"
-JWT_EXPIRES_IN="15m"
-PORT=3000
-API_PREFIX="api"
+NODE_ENV=development
+APP_PORT=4000
+APP_API_PREFIX=api
+JWT_SECRET=change-me
+JWT_EXPIRES_IN=15m
+CORS_ORIGIN=http://localhost:3000
+DATABASE_URL=
