fix schema add cloudinary and demo api company

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ AUTH_JWT_REFRESH_TOKEN_EXPIRED =
 
 AUTH_JWT_AUDIENCE = 
 AUTH_JWT_ISSUER = 
+
+# Cloudinary
+CLOUDINARY_NAME=xxxxx
+CLOUDINARY_KEY=xxxxx
+CLOUDINARY_SECRET=xxxxx
