UPDATE: update env.example

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,22 @@ AUTH_JWT_REFRESH_TOKEN_EXPIRED =
 AUTH_JWT_AUDIENCE = 
 AUTH_JWT_ISSUER = 
 
+FORGOT_PASSWORD_BASE_URL=
+
 # Cloudinary
 CLOUDINARY_NAME=xxxxx
 CLOUDINARY_KEY=xxxxx
 CLOUDINARY_SECRET=xxxxx
+
+#EMAIL
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_FROM=
+
+#Google
+AUTH_SOCIAL_GOOGLE_CLIENT_ID=
+AUTH_SOCIAL_GOOGLE_CLIENT_SECRET=
+
+
