setup redis cache

--- a/.env.example
+++ b/.env.example
@@ -33,4 +33,6 @@ EMAIL_FROM=
 AUTH_SOCIAL_GOOGLE_CLIENT_ID=
 AUTH_SOCIAL_GOOGLE_CLIENT_SECRET=
 
+#Redis
+REDIS_URL=redis://default:password@host:port
 
