--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "npm run lint && tsc -p tsconfig.build.json && nest build",
+    "prebuild": "npm run lint || true",
+    "build": "tsc -p tsconfig.build.json && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" --max-warnings=0",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "postinstall": "prisma generate",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
